--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
     "start": "node server.js",
     "dev": "NODE_ENV=development node server.js"
   },
-  "keywords": ["chess","socket.io","rooms","docker"],
+  "keywords": [
+    "chess",
+    "socket.io",
+    "rooms",
+    "docker"
+  ],
   "author": "Didictateur",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "prettier": "3.7.3"
   }
 }
